Padding changed to avoid clipping on color swatches

--- a/src/style/panel.less
+++ b/src/style/panel.less
@@ -133,7 +133,6 @@
 }
 
 .formline__no-padding {
-    padding-top: 0.2rem;
     padding-bottom: 0.1rem;    
 }
 
